# review-like-him

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: ROADMAP.md
docs/implementation-plans/: phase-1-reliability-and-polish.md  phase-2-smarter-reviews.md  phase-3-team-features.md  phase-4-platform.md  technical-debt.md
docs/superpowers/specs/: 2026-03-13-review-like-him-design.md
review_bot/: __init__.py
review_bot/cli/: __init__.py  compare_cmd.py  db_cmd.py  init_cmd.py  main.py  persona_cmd.py  review_cmd.py  server_cmd.py  status_cmd.py  utils.py
review_bot/config/: __init__.py  paths.py  repo_config.py  settings.py
review_bot/dashboard/: __init__.py  queries.py  router.py
review_bot/dashboard/static/: style.css
review_bot/dashboard/templates/: activity.html  base.html  config.html  overview.html  personas.html  queue.html
review_bot/db/: __init__.py  migration.py
review_bot/github/: __init__.py  api.py  app.py  rate_limits.py  setup.py
review_bot/notifications/: __init__.py  base.py  discord.py  slack.py
review_bot/persona/: __init__.py  analyzer.py  dedup.py  miner.py  profile.py  store.py  temporal.py
review_bot/review/: __init__.py  chunker.py  comparator.py  comparison_formatter.py  feedback.py  feedback_poller.py  file_strategy.py  formatter.py  github_poster.py  merger.py  orchestrator.py  prompt_builder.py  repo_scanner.py  reviewer.py  severity.py
review_bot/server/: __init__.py  app.py  health.py  queue.py  status.py  webhooks.py
review_bot/utils/: __init__.py  git.py  logging.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_comparator.py  test_config.py  test_dashboard.py  test_db_migration.py  test_dedup.py  test_feedback.py  test_feedback_poller.py  test_file_strategy.py  test_formatter.py  test_git_utils.py  test_github_api.py  test_github_poster.py  test_graceful_shutdown.py  test_health.py  test_incremental_mining.py  test_merger.py  test_multi_persona.py  test_narrow_exceptions_repo_scanner.py  test_notifications.py  test_orchestrator.py  test_paths.py  test_persona.py  test_persona_store.py  test_rate_limits.py  test_repo_config.py  test_repo_scanner.py  test_server_integration.py  test_severity.py  test_status_cmd.py  test_webhooks.py
