[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-like-him"
version = "0.1.0"
description = "AI-powered reviewer bots that mimic real people's code review style"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "claude-agent-sdk>=0.1",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.scripts]
review-bot = "review_bot.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
]
postgresql = [
    "asyncpg>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["review_bot"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["review_bot/dashboard/static", "review_bot/dashboard/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
]
